--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Elixir runtime as a parent image
-FROM elixir:latest
+FROM elixir:slim
 
 # Set the working directory inside the container
 WORKDIR /app
