--- a/food_ordering/Dockerfile
+++ b/food_ordering/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /food_ordering
 ADD requirements.txt /food_ordering
 RUN pip install --no-cache-dir -r requirements.txt
 ADD . /food_ordering
-CMD uvicorn app.main:app --host 0.0.0.0 --port 8000
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
