--- a/restaurant_management/Dockerfile
+++ b/restaurant_management/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /restaurant_management
 ADD requirements.txt /restaurant_management
 RUN pip install --no-cache-dir -r requirements.txt
 ADD . /restaurant_management
-CMD uvicorn app.main:app --host 0.0.0.0 --port 9000
+CMD uvicorn app.main:app --host 0.0.0.0 --port $PORT
